# fast-tfidf

./: Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  pull-request-template.md
.github/ISSUE_TEMPLATE/: new-issue.md
.github/workflows/: ci.yaml  release.yaml
benchmarks/: COMPARISON_RESULTS.md  README.md  benchmark.py  simple_comparison.py
fast_tfidf/: __init__.py  main.py
tests/: __init__.py  test_main.py
