[tool.poetry]
name = "fast_tfidf"
version = "0.1.0"
description = "A fast implementation of tf-idf"
authors = ["nathan pilkington <npliky@gmail.com>"]
license = "apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.3.0"
nltk = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
mypy = "^1.16.1"
isort = "^6.0.1"
ruff = "^0.14.10"

[tool.isort]
line_length=114
multi_line_output=3
include_trailing_comma="True"

[tool.mypy]
exclude = ["venv", ".venv"]
disallow_untyped_defs="True"
disallow_incomplete_defs="True"
show_error_codes="True"

[tool.ruff]
line-length = 114
target-version = "py314"
extend-exclude = ["__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
